Added blockstate command suggested here: https://github.com/FancyInnovations/FancyPlugins/issues/43